2014-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't enable GCC warnings in configuration.

	* Makefile.am (AM_CFLAGS): Delete var.

2014-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Elide single-use local var.

	* libpq.c (pg_ftype): ...here.

2014-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Avoid ‘NUM_INT’, ‘C_INT’ for oid, size_t.

	* libpq.c (pg_lo_get_oid): Use ‘NUM_ULONG’.
	(pg_lo_seek): Likewise, and also ‘C_LONG’.
	(pg_lo_import, pg_oid_value, pg_ftype): Use ‘NUM_ULONG’.

2014-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Avoid ‘scm_ftell’.

	* libpq.c (lob_seek): New static func forward-decl.
	(pg_lo_tell): Use ‘lob_seek’.

2014-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Consolidate some ‘if !USE_CMOD’ blocks.

	* Makefile.am (d_DATA) [!USE_CMOD]: Move into ‘else’
	branch of the ‘if USE_CMOD’ block that defines ‘d_LTLIBRARIES’.
	(postgres.exports, postgres): Remove surrounding ‘if !USE_CMOD’.

2014-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] De-bifurcate module init flow.

	* libpq.c (MOD_INIT_LINK_THUNK): Remove surrounding
	preprocessor conditional and related ‘!USE_CMOD’ branch.
	* Makefile.am (postgres) [!USE_CMOD]: Update link func name template.

2014-01-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Do sofix/uninstall-sofixed unconditionally.

	* Makefile.am (soargs): New var,
	defined for both ‘USE_CMOD’ and ‘!USE_CMOD’.
	(install-data-hook): Do sofix unconditionally; use $(soargs).
	(uninstall-hook): Likewise for uninstall-sofixed.

2014-01-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Avoid sofile version.

	* Makefile.am (postgres_la_LDFLAGS):
	Replace ‘-version-info 0:0:0’ with ‘-avoid-version’.

2014-01-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Add abstraction: bx

	* Makefile.am (bx): New var.
	(include, install-data-hook, uninstall-hook): Use $(bx).

2014-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Don't bother w/ <postgresql/...> headers.
